--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "name": "semantic-example",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "expo": "~38.0.1",
@@ -19,7 +21,13 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "semantic-release": "^17.1.1"
   },
-  "private": true
+  "private": true,
+  "version": "0.0.0-development",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giautm/semantic-example.git"
+  }
 }
