--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
-    "semantic-release-expo": "^2.2.3"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.41",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/react-native": "~0.62.13",
-    "typescript": "~3.9.5",
-    "semantic-release": "^17.1.1"
+    "@types/react": "~16.9.41",
+    "semantic-release-expo": "^2.2.3",
+    "semantic-release": "^17.1.1",
+    "typescript": "~3.9.5"
   },
   "private": true,
   "version": "0.0.0-development",
