--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@babel/core": "^7.8.6",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@types/react-native": "~0.62.13",
+    "@semantic-release/github": "^7.0.7",
     "@types/react": "~16.9.41",
-    "semantic-release-expo": "^2.2.3",
+    "@types/react-native": "~0.62.13",
     "semantic-release": "^17.1.1",
+    "semantic-release-expo": "^2.2.3",
     "typescript": "~3.9.5"
   },
   "private": true,
